Wired up theme and created html index page

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-awesome
+theme: jekyll-theme-architect
+title: Azure notes
+description: Cheat sheets and tips to make life easier the next time around
