--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-architect
 title: Azure notes
 description: Cheat sheets and tips to make life easier the next time around
+show_drafts: true
